.k8s/apps/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app: prowlarr-21.3.7
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/version: 2.3.0.5236
    helm-revision: "1"
    helm.sh/chart: prowlarr-21.3.7
    kubenix/hash: 04f774cd3b1b44f2bac1c971d955c3ab9b64ab90
    release: prowlarr
  name: prowlarr
  namespace: apps
spec:
  replicas: 0
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: prowlarr
      app.kubernetes.io/name: prowlarr
      pod.name: main
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/cnpg: fc940fff4269c53072f7039f0811133e9b83400670af014010bf50d3f13740f4
        checksum/configmaps: e3a9697d882b62fa6f79bd3364b55f7a4b7b4f6cc374b6916075e5d59fef20c4
        checksum/mariadb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
        checksum/mongodb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
        checksum/persistence: 135bbcc47d85c94c8f25474bd6dd135612c312c3c40adcdae3e6faa8603bbd94
        checksum/redis: 013343a028cbb3f7e08f4ba7522702dd98e52632c688641074b0b1db3df29894
        checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/services: 209fbe54ab4cb7d132d8619768fad07a6901826a29bbf6ddcb7cd4a85b470aed
        checksum/solr: 29c14feeaddbf7762052db593898d274941f539cee681ddc613957587686f347
      labels:
        app: prowlarr-21.3.7
        app.kubernetes.io/instance: prowlarr
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: prowlarr
        app.kubernetes.io/version: 2.3.0.5236
        helm-revision: "1"
        helm.sh/chart: prowlarr-21.3.7
        pod.lifecycle: permanent
        pod.name: main
        release: prowlarr
        truecharts.org/pvc: config
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: truecharts.org/pvc
                    operator: In
                    values:
                      - config
              topologyKey: kubernetes.io/hostname
      automountServiceAccountToken: false
      containers:
        - args:
            - prowlarr
          image: ghcr.io/onedr0p/exportarr:v2.2.0@sha256:320b0ea7399f4b9af4741dcdddd7d40c05c36b0359679305d8a54df4e97065df
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 9697
              scheme: HTTP
            initialDelaySeconds: 12
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          name: prowlarr-exportarr
          readinessProbe:
            failureThreshold: 4
            httpGet:
              path: /healthz
              port: 9697
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 12
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 568
            runAsNonRoot: true
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /healthz
              port: 9697
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /config
              name: config
              readOnly: true
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /config/Definitions/Custom
              name: prowlarr-custom-definitions
              readOnly: true
            - mountPath: /shared
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
        - env:
            - name: TZ
              value: UTC
            - name: UMASK
              value: "0022"
            - name: UMASK_SET
              value: "0022"
            - name: NVIDIA_VISIBLE_DEVICES
              value: void
            - name: S6_READ_ONLY_ROOT
              value: "1"
            - name: PROWLARR__APP__INSTANCENAME
              value: Prowlarr
            - name: PROWLARR__APP__THEME
              value: dark
            - name: PROWLARR__AUTH__METHOD
              value: ""
            - name: PROWLARR__AUTH__REQUIRED
              value: DisabledForLocalAddresses
            - name: PROWLARR__LOG__LEVEL
              value: info
            - name: PROWLARR__SERVER__PORT
              value: "9696"
            - name: PROWLARR__UPDATE__BRANCH
              value: develop
          image: ghcr.io/home-operations/prowlarr:2.3.4.5307@sha256:029b2b52134a689bd528f466664d06f1d61dd80a83acd18ad8fd5eda9a65de10
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /ping
              port: 9696
              scheme: HTTP
            initialDelaySeconds: 12
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          name: prowlarr
          ports:
            - containerPort: 9696
              name: main
              protocol: TCP
            - containerPort: 9697
              name: metrics
              protocol: TCP
          readinessProbe:
            failureThreshold: 4
            httpGet:
              path: /ping
              port: 9696
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 12
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 568
            runAsNonRoot: true
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 9696
            timeoutSeconds: 3
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /config
              name: config
              readOnly: false
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /config/Definitions/Custom
              name: prowlarr-custom-definitions
              readOnly: false
            - mountPath: /shared
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      hostUsers: true
      nodeSelector:
        kubernetes.io/arch: amd64
      priorityClassName: preemptible
      restartPolicy: Always
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
        sysctls: []
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: prowlarr
              app.kubernetes.io/name: prowlarr
              pod.name: main
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
          name: devshm
        - emptyDir: {}
          name: shared
        - emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
          name: tmp
        - emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
          name: varlogs
        - emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
          name: varrun
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: prowlarr-custom-definitions
          secret:
            defaultMode: 511
            items:
              - key: custom-indexer
                path: custom-indexer.yml
            optional: false
            secretName: prowlarr-custom-definitions
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app: prowlarr-21.3.7
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/version: 2.3.0.5236
    helm-revision: "1"
    helm.sh/chart: prowlarr-21.3.7
    kubenix/hash: 04f774cd3b1b44f2bac1c971d955c3ab9b64ab90
    release: prowlarr
    service.name: main
  name: prowlarr
  namespace: apps
spec:
  ports:
    - name: main
      port: 9696
      protocol: TCP
      targetPort: 9696
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
    pod.name: main
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app: prowlarr-21.3.7
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/version: 2.3.0.5236
    helm-revision: "1"
    helm.sh/chart: prowlarr-21.3.7
    kubenix/hash: 04f774cd3b1b44f2bac1c971d955c3ab9b64ab90
    release: prowlarr
    service.name: metrics
  name: prowlarr-metrics
  namespace: apps
spec:
  ports:
    - name: metrics
      port: 9697
      protocol: TCP
      targetPort: 9697
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
    pod.name: main
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
    checksum/services: 1bab3c0185734412b7cf8b95e94233dc2edecc29461be0136cf4a3db5d7a97db
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app: prowlarr-21.3.7
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/version: 2.3.0.5236
    helm-revision: "1"
    helm.sh/chart: prowlarr-21.3.7
    kubenix/hash: 04f774cd3b1b44f2bac1c971d955c3ab9b64ab90
    release: prowlarr
  name: prowlarr
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: prowlarr.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  number: 9696
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - prowlarr.josevictor.me
      secretName: wildcard-tls
